--- a/basic_model.conf
+++ b/basic_model.conf
@@ -2,16 +2,35 @@
 r = sub, obj, mod, act
 
 [policy_definition]
-p = sub, obj, mod, act
+p = sub, obj, mod, act 
 
 [role_definition]
 g = _, _
 g2 = _, _
 g3 = _, _
+g4 = _, _
+g5 = _, _, _
+g6 = _, _, _
 
 [policy_effect]
 e = some(where (p.eft == allow))
 
 [matchers]
-m = ( g(r.sub.Name, p.sub) || r.sub.Role == p.sub ) && !g3(r.mod+"/"+r.act, r.sub.Name) && keyMatch(r.obj.RN, p.obj) && keyMatch(r.mod, p.mod) && keyMatch(r.act, p.act) && !(r.act != "act/create" && r.sub.Name != r.obj.Owner) 
-|| r.sub.Role == "superuser"
+m = ( g(r.sub.Name, p.sub) || r.sub.Role == p.sub ) \
+
+	&& ( !g3(r.mod+"/"+r.act, r.sub.Name) && !g3(r.mod+"/"+r.act, p.sub)  && !g3(r.mod+"/"+r.act, r.sub.Group) )  \ 
+
+	&& ( !g4(r.obj.RN, r.sub.Name) && !g4(r.obj.RN, p.sub) && !g4(r.obj.RN, r.sub.Group) ) \
+
+	&& keyMatch(r.obj.RN, p.obj) \
+
+	&& keyMatch(r.mod, p.mod)  \
+
+	&& keyMatch(r.act, p.act) \
+
+	|| r.sub.Role == "superuser"
+
+
+
+
+	 
