--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run lint && nodemon --exec babel-node index.js -e conf,csv,js",
+    "start": "nodemon --exec babel-node index.js -e conf,csv,js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .js"
   },
