allowing only object owners to perform non create operations

--- a/basic_model.conf
+++ b/basic_model.conf
@@ -28,6 +28,8 @@ m = ( g(r.sub.Name, p.sub) || r.sub.Role == p.sub ) \
 
 	&& keyMatch(r.act, p.act) \
 
+	&& !(r.act != "create" && r.sub.Name != r.obj.Owner) \
+
 	|| r.sub.Role == "superuser"
 
 
