working without global deny rules

--- a/basic_model.conf
+++ b/basic_model.conf
@@ -9,30 +9,41 @@ g = _, _
 g2 = _, _
 g3 = _, _
 g4 = _, _
-g5 = _, _, _
+g5 = _, _
 g6 = _, _, _
+
 
 [policy_effect]
 e = some(where (p.eft == allow))
 
 [matchers]
-m = ( g(r.sub.Name, p.sub) || r.sub.Role == p.sub ) \
+m = ( ( ( g(r.sub.Name, p.sub) || r.sub.Role == p.sub ) \
 
-	&& ( !g3(r.mod+"/"+r.act, r.sub.Name) && !g3(r.mod+"/"+r.act, p.sub)  && !g3(r.mod+"/"+r.act, r.sub.Group) )  \ 
+	&& ( !g4(r.mod+"/"+r.act, r.sub.Name) && !g4(r.mod+"/"+r.act, p.sub)  && !g4(r.mod+"/"+r.act, r.sub.Group) )  \ 
 
-	&& ( !g4(r.obj.RN, r.sub.Name) && !g4(r.obj.RN, p.sub) && !g4(r.obj.RN, r.sub.Group) ) \
+	&& ( !g5(r.obj.RN, r.sub.Name) && !g5(r.obj.RN, p.sub) && !g5(r.obj.RN, r.sub.Group) ) \
 
 	&& keyMatch(r.obj.RN, p.obj) \
 
 	&& keyMatch(r.mod, p.mod)  \
 
-	&& keyMatch(r.act, p.act) \
+	&& keyMatch(r.act, p.act) ) \
 
-	&& !(r.act != "create" && r.sub.Name != r.obj.Owner) \
+	|| \ 
 
-	|| r.sub.Role == "superuser"
+ 	( g2(r.sub.Name, r.sub.Group) \
+
+ 	&& g3(r.obj.RN, r.sub.Group) \
+
+ 	&& g6(r.mod+"/"+r.act, r.sub.Group, r.sub.Name) || r.act != "create" ) ) \ 
+
+ 	&& !(r.act != "create" && r.sub.Name != r.obj.Owner) \
+
+ 	|| r.sub.Role == "superuser"
+
+ 	
 
 
 
+	
 
-	 
