--- a/basic_model.conf
+++ b/basic_model.conf
@@ -19,9 +19,9 @@ e = some(where (p.eft == allow))
 [matchers]
 m = ( ( ( g(r.sub.Name, p.sub) || r.sub.Role == p.sub ) \
 
-	&& ( !g4(r.mod+"/"+r.act, r.sub.Name) && !g4(r.mod+"/"+r.act, p.sub)  && !g4(r.mod+"/"+r.act, r.sub.Group) )  \ 
+	&& !g4( r.mod+"/"+r.act, r.sub.Name) && !g4(r.mod+"/"+r.act, p.sub) && !g4(r.mod+"/"+r.act, r.sub.Group)  \
 
-	&& ( !g5(r.obj.RN, r.sub.Name) && !g5(r.obj.RN, p.sub) && !g5(r.obj.RN, r.sub.Group) ) \
+	&& ( !g5(r.obj.RN, r.sub.Name) && !g5(r.obj.RN, p.sub) ) \
 
 	&& keyMatch(r.obj.RN, p.obj) \
 
@@ -31,19 +31,21 @@ m = ( ( ( g(r.sub.Name, p.sub) || r.sub.Role == p.sub ) \
 
 	|| \ 
 
- 	( g2(r.sub.Name, r.sub.Group) \
+ 	( \
+
+ 	( g(r.sub.Name, p.sub) || r.sub.Role == p.sub ) \
+
+ 	&& !g4( r.mod+"/"+r.act, r.sub.Name) && !g4(r.mod+"/"+r.act, p.sub) && !g4(r.mod+"/"+r.act, r.sub.Group)  \
+
+	&& ( !g5(r.obj.RN, r.sub.Name) && !g5(r.obj.RN, p.sub))  \
+
+ 	&& g2(r.sub.Name, r.sub.Group) \
 
  	&& g3(r.obj.RN, r.sub.Group) \
 
- 	&& g6(r.mod+"/"+r.act, r.sub.Group, r.sub.Name) || r.act != "create" ) ) \ 
-
- 	&& !(r.act != "create" && r.sub.Name != r.obj.Owner) \
+ 	&& (g6(r.mod+"/"+r.act, r.sub.Group, r.sub.Name) || g6(r.mod+"/"+r.act, r.sub.Group, p.sub)) ) ) \
 
  	|| r.sub.Role == "superuser"
 
- 	
 
-
-
-	
 
