--- a/basic_model.conf
+++ b/basic_model.conf
@@ -8,44 +8,18 @@ p = sub, obj, mod, act
 g = _, _
 g2 = _, _
 g3 = _, _
-g4 = _, _
-g5 = _, _
-g6 = _, _, _
 
 
 [policy_effect]
 e = some(where (p.eft == allow))
 
 [matchers]
-m = ( ( ( g(r.sub.Name, p.sub) || r.sub.Role == p.sub ) \
-
-	&& !g4( r.mod+"/"+r.act, r.sub.Name) && !g4(r.mod+"/"+r.act, p.sub) && !g4(r.mod+"/"+r.act, r.sub.Group)  \
-
-	&& ( !g5(r.obj.RN, r.sub.Name) && !g5(r.obj.RN, p.sub) ) \
-
-	&& keyMatch(r.obj.RN, p.obj) \
+m = (g(r.sub.Name, p.sub) || p.sub == r.sub.Role) \
+	
+	&& g2(r.obj.RN, p.obj) \
 
 	&& keyMatch(r.mod, p.mod)  \
 
-	&& keyMatch(r.act, p.act) ) \
+	&& keyMatch(r.act, p.act)  \
 
-	|| \ 
-
- 	( \
-
- 	( g(r.sub.Name, p.sub) || r.sub.Role == p.sub ) \
-
- 	&& !g4( r.mod+"/"+r.act, r.sub.Name) && !g4(r.mod+"/"+r.act, p.sub) && !g4(r.mod+"/"+r.act, r.sub.Group)  \
-
-	&& ( !g5(r.obj.RN, r.sub.Name) && !g5(r.obj.RN, p.sub))  \
-
- 	&& g2(r.sub.Name, r.sub.Group) \
-
- 	&& g3(r.obj.RN, r.sub.Group) \
-
- 	&& (g6(r.mod+"/"+r.act, r.sub.Group, r.sub.Name) || g6(r.mod+"/"+r.act, r.sub.Group, p.sub)) ) ) \
-
- 	|| r.sub.Role == "superuser"
-
-
-
+	|| r.sub.Role == 'superuser'
