--- a/basic_model.conf
+++ b/basic_model.conf
@@ -8,7 +8,8 @@ p = sub, obj, mod, act
 g = _, _
 g2 = _, _
 g3 = _, _
-
+g4 = _, _
+g5 = _, _
 
 [policy_effect]
 e = some(where (p.eft == allow))
@@ -16,10 +17,16 @@ e = some(where (p.eft == allow))
 [matchers]
 m = (g(r.sub.Name, p.sub) || p.sub == r.sub.Role) \
 	
-	&& g2(r.obj.RN, p.obj) \
+	&& g3(r.obj.RN, p.obj) \
 
 	&& keyMatch(r.mod, p.mod)  \
 
-	&& keyMatch(r.act, p.act)  \
+	&& ( keyMatch(r.act, p.act) || r.sub.Name == r.obj.Owner )  \
+
+	&& !g4(p.sub, r.obj.RN) \
+
+	&& !g5(p.sub,  r.mod+"/"+r.act)  \
 
 	|| r.sub.Role == 'superuser'
+
+
